# Job_Decision_Engine

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: __init__.py  demo_example.py  evaluate.py  seed_profile.py
src/: __init__.py  config.py  db.py  schemas.py
src/engine/: __init__.py  orchestrator.py  scorer.py
src/ingestion/: __init__.py  parser.py  url_scraper.py
src/llm/: __init__.py  reasoning.py
src/llm/prompts/: reasoning_v1.yaml
src/logging/: __init__.py  persistence.py
src/signals/: __init__.py  experience.py  semantic.py  skills.py
streamlit_app/: __init__.py  app.py
tests/: test_app_smoke.py  test_config.py  test_db.py  test_demo_example.py  test_evaluate.py  test_experience.py  test_integration_pipeline.py  test_llm_reasoning.py  test_orchestrator.py  test_parser.py  test_persistence.py  test_schemas.py  test_scorer.py  test_seed_profile.py  test_semantic.py  test_skills.py  test_streamlit_app.py
